--- a/C968_PA_MPlatt/C968_PA_MPlatt.csproj
+++ b/C968_PA_MPlatt/C968_PA_MPlatt.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Form_Landing.Designer.cs">
       <DependentUpon>Form_Landing.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_ModifyPart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_ModifyPart.Designer.cs">
+      <DependentUpon>Form_ModifyPart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Inhouse.cs" />
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\Outsourced.cs" />
@@ -70,6 +76,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_Landing.resx">
       <DependentUpon>Form_Landing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_ModifyPart.resx">
+      <DependentUpon>Form_ModifyPart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
